# libsparql

./: .travis.yml  README.rst  TODO  configure.ac
etc/coverity/: model.cc
lib/: xml_writer.h
src/: Makefile.am  sparql++.h
src/sparql++/: Makefile.am  extern.cc  extern.h  feature.cc  feature.h  format.cc  format.h  module.cc  module.h  version.cc  version.h.in  writer.cc  writer.h
src/sparql++/writer/: bool.cc  bool.h  brtr.cc  brtr.h  csv.cc  csv.h  impl.cc  impl.h  json.cc  json.h  sse.cc  sse.h  tsv.cc  tsv.h  xml.cc  xml.h  xslt.cc  xslt.h
test/: Makefile.am  check_feature.cc  check_format.cc  check_module.cc  check_version.cc  check_writer.cc  check_writer_bool.cc  check_writer_brtr.cc  check_writer_csv.cc  check_writer_json.cc  check_writer_sse.cc  check_writer_tsv.cc  check_writer_xml.cc  check_writer_xslt.cc
test/fixtures/: bindings.csv  bindings.srj  bindings.srx  bindings.tsv  boolean.srj
test/sparql++/: .gitignore  Makefile.am  check_module.cc  check_writer.cc  check_writer.h  check_writer_bool.cc  check_writer_brtr.cc  check_writer_csv.cc  check_writer_json.cc  check_writer_sse.cc  check_writer_tsv.cc  check_writer_xml.cc  check_writer_xslt.cc
test/sparql++/fixtures/: boolean.srx
