lib_LTLIBRARIES = libsparql++.la

libsparql___la_SOURCES =     \
  extern.cc               \
  feature.cc              \
  format.cc               \
  module.cc               \
  version.cc              \
  writer.cc               \
  writer/impl.cc

base_pkgincludedir = $(includedir)/sparql++

base_pkginclude_HEADERS = \
  extern.h                \
  feature.h               \
  format.h                \
  module.h                \
  version.h               \
  writer.h
